<resources>
    <string name="sort_items">Sort by</string>
    <string name="app_name">Coffee Shop</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_subtitle" translatable="false">mr.abolfazl.alz@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Setting</string>
    <string name="api_address" translatable="false">http://10.0.2.2/coffee-shop/api/</string>
    <string name="home_menu">Home</string>
    <string name="category_name" translatable="false">Category Name</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="coffee_espresso" translatable="false">Coffee Espresso</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">Logo</string>
    <string name="edit_account_menu">Edit Account</string>
    <string name="order_history_menu">Order History</string>
    <string name="create_account_now">create Account Now</string>
    <string name="toLoginBtn">i already have account</string>
    <string name="createAccountBtn">Create Account</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="undefinedDisplayName">Undefined</string>
    <string name="edituser">Edit Account</string>
    <string name="display_name_hint">Display Name</string>
    <string name="display_name_label">Your Display Name:</string>
    <string name="email_address_label">Email Address:</string>
    <string name="submit_edit">Edit</string>
    <string name="email_address_hint">Email Address</string>
    <string name="log_out">Log out</string>
    <string name="password_not_match">Entered passwords are not match</string>
    <string name="signup_field">Sign up field</string>
    <string name="count_item">How many do you want?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_cart_result_success">Item added to your cart</string>
    <string name="add_cart_result_failed">adding item to cart is not successful, please try again</string>
    <string name="cart_menu">Cart</string>
    <string name="bad_response">response is incorrect</string>
    <string name="payment_btn">Done and Payment</string>
    <string name="total_price">Total Price: $%d</string>
    <string name="cart_empty">your cart is empty</string>
    <string name="undefine_size">please select size</string>
    <string name="api_token" translatable="false">ad31e18b6b5d43645ec50fb02cb5a07c</string>
    <string name="sample_review_username">User Name</string>
    <string name="in_your_cart">in your cart</string>
    <string name="reviews_and_rates">Reviews and rates</string>
    <string name="see_all_reviews">See all reviews</string>
    <string name="write_your_review">Write your review</string>
    <string name="item_image_desc">ItemImage</string>
    <string name="item_title_desc">Item Title</string>
    <string name="review_text_hint">Write your Review text here</string>
    <string name="write_review_activity_header">Rate and Write Review Item</string>
    <string name="post_review_btn">post</string>
    <string name="admin_menu">Admin</string>
    <string name="title_activity_maps">Map</string>
    <string name="manager_address_btn">Manage your address</string>
    <string name="address_name_header">Address Name:</string>
    <string name="address_text_header">Address details for routing:</string>
    <string name="address_field_hint">Example: Street, Alley, Block and …</string>
    <string name="address_name_hint">Like: Home, Work or Company</string>
    <string name="add_address_btn">Adding this address</string>
    <string name="edit_address_btn">Edit this address</string>
    <string name="address_name">Address Name</string>
    <string name="send_to">Send to:</string>
    <string name="select_address_btn">Select or Edit Address</string>
    <string name="items">Items: </string>
    <string name="continue_payment">Continue</string>
    <string name="order_type_header">How to be order</string>
    <string name="send_to_address_option">Send to the given address</string>
    <string name="come_to_coffee_shop_option">I come to the coffee shop</string>
    <string name="sample_phone" translatable="false">0912 373 0014</string>
    <string name="sample_name" translatable="false">Abolfazl Alizadeh</string>
    <string name="add_new_address">Add new Address</string>
    <string name="go_edit_address_btn"><![CDATA[Edit Address >]]></string>
    <string name="delete_all_item">Delete all item</string>
    <string name="cart_is_empty_msg">your cart is empty</string>
    <string name="nav_admin_order">Orders</string>
    <string name="user_address">"Address: "</string>
    <string name="show_detail">Show Detail</string>
    <string name="delete_order">Delete Order</string>
    <string name="message_to_customer">Message to customer</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="name_undefined">"(Undefined)"</string>
    <string name="msg_prepare_order">Dear customer, your order is being prepared</string>
    <string name="error_register_invalid">Invalid error in receive data from service</string>
    <string name="error_register_server">Service performance error</string>
    <string name="error_register_parameter">Programming problem, please let us know</string>
    <string name="error_register_login">phone number or password are invalid</string>
    <string name="error_register_signup">phone number is taken</string>
    <string name="volley_error_timeout">server timeout, please try again</string>
    <string name="volley_error_server">Error from the server side, please try again</string>
    <string name="volley_error_connection">No internet connection found, please be sure to connect to the internet then try again</string>
    <string name="volley_error_parse">error in parsing response, let us know</string>
    <string name="volley_error_network">Difficulty connecting to the server</string>
    <string name="volley_error_invalid">Invalid Error, </string>
    <string name="order_status_changed">Order status has changed</string>
    <string name="accept">Accept</string>
    <plurals name="unread_orders_count">
        <item quantity="one">You have %d new order</item>
        <item quantity="other">You have %d new orders</item>
    </plurals>
    <string name="unread_order">You have a new order</string>
    <string name="new_order">New order</string>
    <string name="order_items">Order Items</string>
    <string name="check_internet">Please connect your internet</string>
    <string name="payment_done_msg">Thank you for choosing us</string>
    <string name="select_address_msg">Please select your address</string>
    <string name="come_to_coffee_shop">Delivery of orders in the coffee shop</string>
    <string name="delivery_to_address">Send to the address</string>
    <string name="notification_has_sent">Notification has sent</string>
    <string name="once_price">Once: $%d</string>
    <string name="discounted_price">Discounted: $%d</string>
    <string name="cart_header">Cart</string>
    <string name="first_name_title">First name:</string>
    <string name="your_first_name">Your First Name</string>
    <string name="your_last_name">Your last name</string>
    <string name="last_name_hint">"Last name: "</string>
    <string name="phone_number_label">"Phone number: "</string>
    <string name="information_update">Your information has updated</string>
    <string name="phone_number_hint">Like: 09xx xxx xxxx</string>
    <string name="invalid_phone">The number entered is invalid</string>
    <string name="order_done_btn">The order was completed</string>
    <string name="order_was_sent">The order was sent</string>
    <string name="order_arrived_btn">The order reached its destination</string>
    <string name="order_ready_btn">The order was ready</string>
    <string name="order_sent_btn">The order was sent</string>
    <string name="order_accept_btn">Order confirmation</string>
    <string name="notification_sent">Notification has sent</string>
    <string name="price_text">"Price:"</string>
    <string name="complete">Order is complete</string>
    <string name="status_text">Status:</string>
    <string name="history_title">History</string>
    <string name="choose_image">Choose image</string>
    <string name="item_name_header">Item name:</string>
    <string name="item_example_name">Example: Single</string>
    <string name="item_type_header">Item Type:</string>
    <string name="item_example_type">Example: Espresso</string>
    <string name="category_header">Category: </string>
    <string name="select_category_btn">Select Category</string>
    <string name="none_selected">(none)</string>
    <string name="item_description">Item Description:</string>
    <string name="save_item">Save Item</string>
    <string name="item_editor_title">Item Editor</string>
    <string name="item_saved">Item Saved</string>
    <string name="select_image_error">Please select the item image</string>
    <string name="bad_image_path">can\'t to loading image path</string>
    <string name="name_item_error">Enter name for item</string>
    <string name="description_item_error">Enter description for item</string>
    <string name="type_item_error">Enter type for item</string>
    <string name="item_sizes">Item Sizes</string>
    <string name="size_label_hint">Enter Size label Like `L` or `Large`</string>
    <string name="add_btn">Add</string>
    <string name="category_item_error">Enter category for item</string>
    <string name="size_item_error">Enter size (sizes) for this item</string>
    <string name="add_new_item_btn">Add new item</string>
    <string name="categories_menu">Categories</string>
    <string name="done_complete_create_account_btn">Done and save information</string>
    <string name="manage_items">Manage Items</string>
    <string name="edit_item_btn">Edit Item</string>
    <string name="manage_feeds">Manage Feeds</string>
    <string name="manage_feeds_hint">Manage items displayed on the home screen for the customer</string>
    <string name="add_new_feed_btn">Add new feed</string>
    <string name="items_menu">Items view</string>
    <string name="category_description">Category Description:</string>
    <string name="category_name_header">Category Name:</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="add_new_category_btn">Add New Category</string>
    <string name="edit_category_btn">Edit Category</string>
    <string name="posts_menu">Posts</string>
    <string name="location_logo" translatable="false">Location Logo</string>
    <string name="discount_header">Discounts code</string>
    <string name="discount_hint">You can manage, generate, delete and update discounts codes</string>
    <string name="discount_page">Discounts page</string>
    <string name="discount_name_title">Name</string>
    <string name="discount_name_hint">this can a event like \'mother day\'</string>
    <string name="discount_code_title">Code</string>
    <string name="discount_value_title">Value</string>
    <string name="value_of_discount">Value of discount</string>
    <string name="code_discount_hint">Code</string>
    <string name="discount_default_text">Choice of day</string>
    <string name="discount_expiration_title">Expiration</string>
</resources>