<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_menu" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/categories_menu" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_items"
            android:title="@string/items_menu" />
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/ic_post"
            android:title="@string/posts_menu" />

    </group>
    <group android:id="@+id/register_menu">
        <item
            android:id="@+id/nav_edituser"
            android:icon="@drawable/ic_user"
            android:title="@string/edit_account_menu" />
        <item
            android:id="@+id/nav_admin_user"
            android:icon="@drawable/ic_user"
            android:visible="false"
            android:title="@string/admin_menu" />
        <item
            android:id="@+id/nav_admin_order"
            android:icon="@drawable/ic_cart"
            android:visible="false"
            android:title="@string/nav_admin_order" />
    </group>

    <group android:id="@+id/cart_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history_menu" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/cart_menu" />


    </group>
</menu>
