<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    tools:context=".ui.admin.discount.InsertDiscountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:padding="25dp"
            android:paddingBottom="25dp"
            android:background="@color/dark_primary_dark"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_card_gift_card_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_card_gift_card" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/discount_name_title"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/discount_name_hint"
                android:maxLength="50" />

            <com.futech.coffeeshop.views.HeaderView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:src="@drawable/ic_link"
                app:title="@string/discount_code_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/code_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code_discount_hint"
                android:maxLength="20" />

            <com.futech.coffeeshop.views.HeaderView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:src="@drawable/ic_local_offer"
                app:title="@string/discount_value_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/value_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value_of_discount"
                android:inputType="number"
                android:maxLength="3" />


            <com.futech.coffeeshop.views.HeaderView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:src="@drawable/ic_time_lapse"
                app:title="@string/discount_expiration_title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/choice_date_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount_default_text"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>